# todo-applet

./: .env.example  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: test.yml
dna/coordinator_zomes/todo/: Cargo.toml
dna/coordinator_zomes/todo/src/: lib.rs  signal.rs
dna/integrity_zomes/todo_integrity/: Cargo.toml
dna/integrity_zomes/todo_integrity/src/: lib.rs
dna/workdir/: dna.yaml
nh-launcher-applet/: package.json
nh-launcher-applet/src/: appletConfig.ts  index.ts  todo-applet.ts
nh-launcher-applet/workdir/: dna.yaml  happ.yaml  web-happ.yaml
tests/: package.json
tests/src/: index.ts  utils.ts
ui/: dev.vite.config.js  index.html  package.json  prod.rollup.config.js  prod.vite.config.js  tsconfig.json  vite.config.js
ui/old-applet-structure/: index.html  package.json  vite.config.js
ui/old-applet-structure/src/: applet-index.ts  applet-test-harness.ts  contexts.ts  index.ts  todo-app.ts  todo-store.ts  types.ts  utils.ts
ui/src/: applet-index.ts  applet-test-harness.ts  appletConfig.ts  bundle-harness.ts  contexts.ts  holochain-app.ts  index.ts  todo-app-test-harness.ts  todo-app.ts  todo-applet.ts  todo-service.ts  todo-store.ts  types.ts  utils.ts
we-applet/: package.json
we-applet/demo/: index.html
we-applet/src/: appletConfig.ts  index.ts  todo-applet.ts  todo_applet-applet.ts
we-applet/workdir/: happ.yaml  web-happ.yaml
workdir/: happ.yaml  web-happ.yaml
workdir/sensemaker-enabled/: happ.yaml
(+69 files in other folders)
