[package]
edition = "2021"
name = "todo"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "todo"

[dependencies]
serde = {workspace = true }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
todo_integrity = { path = "../../integrity_zomes/todo_integrity" }

hdk = { workspace = true }